crates/toml/tests/snapshots/invalid/key/without-value-07.stderr
TOML parse error at line 1, column 4
  |
1 | fs.
  |    ^
key with no value, expected `=`

---
TOML parse error at line 1, column 4
  |
1 | fs.
  |    ^
unquoted keys cannot be empty, expected letters, numbers, `-`, `_`
